--- a/index.html
+++ b/index.html
@@ -1,17 +1,38 @@
 <!DOCTYPE html>
+<html lang="fr">
 
-
+<head>
     <meta charset='utf-8'>
     <title>GARAVIDSOR</title>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
     <link rel='stylesheet' type='text/css' media='screen' href='style.css'>
-
+    <script src="https://kit.fontawesome.com/5d86537775.js" crossorigin="anonymous"></script>
     <script src='main.js'></script>
-    <html>
+   
 </head>
 <header><h1>GARADVISOR</h1></header>
 <body>
-<img src="images/AP.jpg" id="AP" class="Font">
-    <P>blabla histoire de garage</P>
-</body>
+<style>
+ul {
+list-style-type: none;
+margin: 0;
+padding: 0;
+}
+</style>
+        <ul>        
+        <div class="Perso">       
+            <li><a href="#" class="Perso">Trouver mon garage</a></li>
+            <li><a href="#" class="Perso">Ce que dit la loi</a></li>
+            <li><a href="#" class="Perso">Histoires de garagistes</a></li>
+            <li><a href="#" class="Perso">Insolite</a></li>  
+        <li><a href="#" class="Perso">J'évalue mon garage</a></li>
+        </div> 
+        </ul> 
+
+</Body>   
+    <div class="TKT">
+    <H3><P>TKT</P></H3>
+    </div>
+    </button>
+    </body>
 </html>
