--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@ padding: 0;
 </style>
         <ul>        
         <div class="Perso">       
-            <li><a href="#" class="Perso">Trouver mon garage</a></li>
+            <li><a href="Trouver_mon_garage.html" class="Perso">Trouver mon garage</a></li>
             <li><a href="#" class="Perso">Ce que dit la loi</a></li>
             <li><a href="#" class="Perso">Histoires de garagistes</a></li>
             <li><a href="#" class="Perso">Insolite</a></li>  
