--- a/index.html
+++ b/index.html
@@ -10,26 +10,41 @@
     <script src='main.js'></script>
    
 </head>
-<header><h1>GARADVISOR</h1></header>
+    <header>
+        <div class="banniere">
+            <h1><img class="banniere" src="images/BANNIERE.png"></h1>
+        </div>
+    </header>
 <body>
-<style>
-ul {
-list-style-type: none;
-margin: 0;
-padding: 0;
-}
-</style>
-        <ul>        
-        <div class="Perso">       
-            <li><a href="Trouver_mon_garage.html" class="Perso">Trouver mon garage</a></li>
-            <li><a href="#" class="Perso">Ce que dit la loi</a></li>
-            <li><a href="#" class="Perso">Histoires de garagistes</a></li>
-            <li><a href="#" class="Perso">Insolite</a></li>  
-        <li><a href="#" class="Perso">J'évalue mon garage</a></li>
-        </div> 
-        </ul> 
 
-</Body>   
+    
+
+    <nav>      
+
+        <ul class="navbar-nav">   
+            <li class="nav-item">
+                <i class="far fa-map"></i>
+                <a href="Trouver_mon_garage.html" class="nav-link">Trouver mon garage</a>
+            </li>
+            <li class="nav-item">
+                <i class="fas fa-balance-scale-left"></i>
+                <a href="#" class="nav-link">Ce que dit la loi</a>
+            </li>
+            <li class="nav-item">
+                <i class="fas fa-book"></i>
+                <a href="#" class="nav-link">Histoires de garagistes</a>
+            </li>
+            <li class="nav-item">
+                <i class="fas fa-grin-squint-tears"></i>
+                <a href="#" class="nav-link">Insolite</a>
+            </li>  
+            <li class="nav-item">
+                <i class="far fa-file-alt"></i>
+                <a href="#" class="nav-link">J'évalue mon garage</a>
+            </li>
+        </ul> 
+    </nav>
+
     <div class="TKT">
     <H3><P>TKT</P></H3>
     </div>
