--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     </nav>
 
     <div class="TKT">
-    <H3><P>TKT</P></H3>
+    <H3><P>Le site est en cours de construction merci de votre patience</P></H3>
     </div>
     </button>
     </body>
