--- a/index.html
+++ b/index.html
@@ -1,5 +1,7 @@
 <!DOCTYPE html>
 <html lang="fr">
+   
+</div>
 
 <head>
     <meta charset='utf-8'>
@@ -14,32 +16,27 @@
         <div class="banniere">
             <h1><img class="banniere" src="images/BANNIERE.png"></h1>
         </div>
+        <div class="chaine">
+            <h2><img class="chaine" src="images/chaine.png"></h2>
     </header>
 <body>
-
     
-
-    <nav>      
-        <ul class="navbar-nav">   
+    <nav>  
+        <ul class="navbar-nav">
             <li class="nav-item">
-                <i class="far fa-map"></i>
-                <a href="Trouver_mon_garage.html" class="nav-link">   Trouver mon garage</a>
+            <a href="Trouver_mon_garage.html" class="nav-link">Trouver mon garage</a>
             </li>
             <li class="nav-item">
-                <i class="fas fa-balance-scale-left"></i>
-                <a href="#" class="nav-link">   Ce que dit la loi</a>
+                <a href="#" class="nav-link">Ce que dit la loi</a>
             </li>
             <li class="nav-item">
-                <i class="fas fa-book"></i>
-                <a href="#" class="nav-link">   Histoires de garagistes</a>
+                <a href="#" class="nav-link">Histoires de garagistes</a>
             </li>
             <li class="nav-item">
-                <i class="fas fa-grin-squint-tears"></i>
-                <a href="#" class="nav-link">   Insolite</a>
+                <a href="#" class="nav-link">Insolite</a>
             </li>  
             <li class="nav-item">
-                <i class="far fa-file-alt"></i>
-                <a href="#" class="nav-link">   J'évalue mon garage</a>
+                <a href="#" class="nav-link">J'évalue mon garage</a>
             </li>
         </ul> 
     </nav>
