--- a/index.html
+++ b/index.html
@@ -43,6 +43,17 @@
         </ul> 
     </nav>
 
+        <div class="bienvenue">
+            <h2>Bonjour et bienvenue sur Garadvisor</h2>
+                <p><br>Bonjour à tous,</br>
+                    <br>Bienvenue sur Garadvisor, comme son nom a pu vous l'indiquer ce site a pour but de de compiler des avis fiables et vérifiés sur les garages automobiles.</br>
+                    <br>Se rendre dans un garage pour un problème sur votre véhicule est souvent angoissant ! Vont-ils trouver la panne ? Suis-je dans un garage fiable ? Combien ça va me coûter ?</br>
+                    <br>Vous trouverez ici des informations pour vous prémunir d'un certain nombre d'embûches. Les aspects juridiques, les avis clients et d'autres aspects plus fun.</br> 
+                    <br>L'idée est aussi d'avoir un espace pour que nos garagistes passionnés puissent s'exprimer.</br>
+                    <br>N'hésitez pas à nous faire part de vos suggestions à l'adresse suivante : garadvisor@orange.Fr</br>
+                </p>
+    </div>
+
     <div class="TKT">
     <H3><P>Le site est en cours de construction merci de votre patience</P></H3>
     </div>
