--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
     </nav>
 
         <div class="bienvenue">
+            <img class="mecano" src="images/mecano.png">
             <h2>Bonjour et bienvenue sur Garadvisor</h2>
                 <p><br>Bonjour à tous,</br>
                     <br>Bienvenue sur Garadvisor, comme son nom a pu vous l'indiquer ce site a pour but de de compiler des avis fiables et vérifiés sur les garages automobiles.</br>
