--- a/index.html
+++ b/index.html
@@ -43,15 +43,17 @@
         </ul> 
     </nav>
 
-        <div class="bienvenue">
+    <div class="bienvenue">
+        <div class="introduction">
             <img class="mecano" src="images/mecano.png">
+        </div>
             <h2>Bonjour et bienvenue sur Garadvisor</h2>
-                <p><br>Bonjour à tous,</br>
-                    <br>Bienvenue sur Garadvisor, comme son nom a pu vous l'indiquer ce site a pour but de de compiler des avis fiables et vérifiés sur les garages automobiles.</br>
-                    <br>Se rendre dans un garage pour un problème sur votre véhicule est souvent angoissant ! Vont-ils trouver la panne ? Suis-je dans un garage fiable ? Combien ça va me coûter ?</br>
-                    <br>Vous trouverez ici des informations pour vous prémunir d'un certain nombre d'embûches. Les aspects juridiques, les avis clients et d'autres aspects plus fun.</br> 
-                    <br>L'idée est aussi d'avoir un espace pour que nos garagistes passionnés puissent s'exprimer.</br>
-                    <br>N'hésitez pas à nous faire part de vos suggestions à l'adresse suivante : garadvisor@orange.Fr</br>
+                <p> Bonjour à tous,
+                    <br>Bienvenue sur Garadvisor, comme son nom a pu vous l'indiquer ce site a pour but de de compiler des avis fiables et vérifiés sur les garages automobiles.
+                    <br>Se rendre dans un garage pour un problème sur votre véhicule est souvent angoissant ! Vont-ils trouver la panne ? Suis-je dans un garage fiable ? Combien ça va me coûter ?
+                    <br>Vous trouverez ici des informations pour vous prémunir d'un certain nombre d'embûches. Les aspects juridiques, les avis clients et d'autres aspects plus fun.
+                    <br>L'idée est aussi d'avoir un espace pour que nos garagistes passionnés puissent s'exprimer.
+                    <br>N'hésitez pas à nous faire part de vos suggestions à l'adresse suivante : garadvisor@orange.Fr
                 </p>
     </div>
 
