--- a/Trouver_mon_garage.html
+++ b/Trouver_mon_garage.html
@@ -13,7 +13,14 @@
 
     <header><h1>GARADVISOR</h1></header>
 
-
+    <div class=carte>
+        <iframe width="800" height="800" frameborder="0" src="https://www.bing.com/maps/embed?h=800&w=800&cp=44.67530234294495~5.0595430721806745&lvl=7&typ=d&sty=r&src=SHELL&FORM=MBEDV8" scrolling="no">
+        </iframe>
+        <div style="white-space: nowrap; text-align: center; width: 800px; padding: 6px 0;">
+           <a id="largeMapLink" target="_blank" href="https://www.bing.com/maps?cp=44.67530234294495~5.0595430721806745&amp;sty=r&amp;lvl=7&amp;FORM=MBEDLD">Afficher une carte plus grande</a> &nbsp; | &nbsp;
+           <a id="dirMapLink" target="_blank" href="https://www.bing.com/maps/directions?cp=44.67530234294495~5.0595430721806745&amp;sty=r&amp;lvl=7&amp;rtp=~pos.44.67530234294495_5.0595430721806745____&amp;FORM=MBEDLD">Calculer l’itinéraire</a>
+     </div>
+   </div>
 
 
 
