--- a/Trouver_mon_garage.html
+++ b/Trouver_mon_garage.html
@@ -14,17 +14,8 @@
     <header><h1>GARADVISOR</h1></header>
 
     <div class=carte>
-        <iframe width="800" height="800" frameborder="0" src="https://www.bing.com/maps/embed?h=800&w=800&cp=44.67530234294495~5.0595430721806745&lvl=7&typ=d&sty=r&src=SHELL&FORM=MBEDV8" scrolling="no">
-        </iframe>
-        <div style="white-space: nowrap; text-align: center; width: 800px; padding: 6px 0;">
-           <a id="largeMapLink" target="_blank" href="https://www.bing.com/maps?cp=44.67530234294495~5.0595430721806745&amp;sty=r&amp;lvl=7&amp;FORM=MBEDLD">Afficher une carte plus grande</a> &nbsp; | &nbsp;
-           <a id="dirMapLink" target="_blank" href="https://www.bing.com/maps/directions?cp=44.67530234294495~5.0595430721806745&amp;sty=r&amp;lvl=7&amp;rtp=~pos.44.67530234294495_5.0595430721806745____&amp;FORM=MBEDLD">Calculer l’itinéraire</a>
-     </div>
-   </div>
-
-
-
-
+        <iframe src="https://www.google.com/maps/embed?pb=!1m16!1m12!1m3!1d3027620.937520496!2d2.3858870903260994!3d46.77667964324588!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!2m1!1sgarage!5e0!3m2!1sfr!2sfr!4v1632863729038!5m2!1sfr!2sfr" width="1000" height="1000" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+    </div>
 
 
 
