--- a/Trouver_mon_garage.html
+++ b/Trouver_mon_garage.html
@@ -1,26 +1,21 @@
 <html lang="fr">
 
-
-    <head>
-        <meta charset='utf-8'>
-        <title>GARAVIDSOR</title>
-        <meta name='viewport' content='width=device-width, initial-scale=1'>
-        <link rel='stylesheet' type='text/css' media='screen' href='style.css'>
-        <script src="https://kit.fontawesome.com/5d86537775.js" crossorigin="anonymous"></script>
-        <script src='main.js'></script>
-       
-    </head>
-
-    <header><h1>GARADVISOR</h1></header>
-
-    <div class=carte>
-        <iframe src="https://www.google.com/maps/embed?pb=!1m16!1m12!1m3!1d3027620.937520496!2d2.3858870903260994!3d46.77667964324588!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!2m1!1sgarage!5e0!3m2!1sfr!2sfr!4v1632863729038!5m2!1sfr!2sfr" width="1000" height="1000" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
-    </div>
-
-
-
-
-
+        <head>
+          <title>Simple Map</title>
+          <script src="https://polyfill.io/v3/polyfill.min.js?features=default"></script>
+          <link rel="stylesheet" type="text/css" href="./style.css" />
+          <script src="script.js"></script>
+        </head>
+        <body>
+          <div id="map"></div>
+      
+          <!-- Async script executes immediately and must be after any DOM elements used in callback. -->
+          <script
+            src="https://maps.googleapis.com/maps/api/js?key=YOUR_API_KEY&callback=initMap&v=weekly"
+            async
+          ></script>
+        </body>
+      </html>
 
 
 
