--- a/Trouver_mon_garage.html
+++ b/Trouver_mon_garage.html
@@ -8,7 +8,7 @@
         </head>
         <body>
           <div id="map"></div>
-      
+            <input type=hidden>
           <!-- Async script executes immediately and must be after any DOM elements used in callback. -->
           <script
             src="https://maps.googleapis.com/maps/api/js?key=AIzaSyALlrBoagBf1I0gbRlRuPmGpv_tGYLuTjQ"
