--- a/Trouver_mon_garage.html
+++ b/Trouver_mon_garage.html
@@ -1,50 +1,18 @@
+<!DOCTYPE html>
 <html lang="fr">
 
-        <head>
-          <title>Simple Map</title>
-          <script src="https://polyfill.io/v3/polyfill.min.js?features=default"></script>
-          <link rel="stylesheet" type="text/css" href="./style.css" />
-          <script src="script.js"></script>
-        </head>
-        <body>
-          <div id="map"></div>
-            <input type=hidden>
-          <!-- Async script executes immediately and must be after any DOM elements used in callback. -->
-          <script
-            src="https://maps.googleapis.com/maps/api/js?key=AIzaSyALlrBoagBf1I0gbRlRuPmGpv_tGYLuTjQ"
-            async
-          ></script>
-        </body>
-      </html>
+    <head>
+        <link rel='stylesheet' type='text/css' media='screen' href='style.css'>
+    </head>
 
+    <body>
+        <div type=Titre>
+            <p>Chercher votre garage</p>
+        </div>  
 
+        <div type=map>
+            <iframe src="https://www.google.com/maps/embed?pb=!1m16!1m12!1m3!1d65835.05652042793!2d2.55280190853097!3d48.76636757461074!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!2m1!1sgarage!5e0!3m2!1sfr!2sfr!4v1632869814713!5m2!1sfr!2sfr" width="1000" height="1000" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+        </div>
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+    </body>
 </html>
