--- a/Trouver_mon_garage.html
+++ b/Trouver_mon_garage.html
@@ -2,17 +2,39 @@
 <html lang="fr">
 
     <head>
+        <meta charset='utf-8'>
+        <title>Trouver mon garage</title>
         <link rel='stylesheet' type='text/css' media='screen' href='style.css'>
     </head>
 
-    <body>
-        <div type=Titre>
-            <p>Chercher votre garage</p>
+    <header>
+        <div type=titre>
+            <h1>Trouver votre garage</h1>
         </div>  
+    </header>
 
-        <div type=map>
-            <iframe src="https://www.google.com/maps/embed?pb=!1m16!1m12!1m3!1d65835.05652042793!2d2.55280190853097!3d48.76636757461074!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!2m1!1sgarage!5e0!3m2!1sfr!2sfr!4v1632869814713!5m2!1sfr!2sfr" width="1000" height="1000" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
-        </div>
+    <body>
 
+        <nav>  
+            <ul class="navbar-nav">
+                <li class="nav-item">
+                <a href="Index.html" class="nav-link">Retour</a>
+                </li>
+                <li class="nav-item">
+                    <a href="#" class="nav-link">Ce que dit la loi</a>
+                </li>
+                <li class="nav-item">
+                    <a href="#" class="nav-link">Histoires de garagistes</a>
+                </li>
+                <li class="nav-item">
+                    <a href="#" class="nav-link">Insolite</a>
+                </li>  
+                <li class="nav-item">
+                    <a href="#" class="nav-link">J'évalue mon garage</a>
+                </li>
+            </ul>
+        </nav>
+
+          <iframe src="https://www.google.com/maps/embed?pb=!1m16!1m12!1m3!1d65835.05652042793!2d2.55280190853097!3d48.76636757461074!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!2m1!1sgarage!5e0!3m2!1sfr!2sfr!4v1632869814713!5m2!1sfr!2sfr" width="1000" height="1000" style="border:0;" allowfullscreen="" loading="lazy" class=map></iframe>
     </body>
 </html>
