--- a/Trouver_mon_garage.html
+++ b/Trouver_mon_garage.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html lang="fr">
 
+
+}
     <head>
         <meta charset='utf-8'>
         <title>Trouver mon garage</title>
@@ -18,7 +20,7 @@
         <nav>  
             <ul class="navbar-nav">
                 <li class="nav-item">
-                <a href="Index.html" class="nav-link">Retour</a>
+                <a href="javascript:history.back()" class="nav-link">Retour</a>
                 </li>
                 <li class="nav-item">
                     <a href="#" class="nav-link">Ce que dit la loi</a>
