--- a/index.html
+++ b/index.html
@@ -1,64 +1,50 @@
 <!DOCTYPE html>
-<html lang="fr">
-
-<link rel="icon" type="image/png" href="images/garadvisor-icon.png" />
-   
-
-<head>
-    <meta charset='utf-8'>
-    <title>GARAVIDSOR</title>
-    <meta name='viewport' content='width=device-width, initial-scale=1'>
-    <link rel='stylesheet' type='text/css' media='screen' href='style.css'>
-    <script src="https://kit.fontawesome.com/5d86537775.js" crossorigin="anonymous"></script>
-    <script src='main.js'></script>
-   
-</head>
+<html>
+  <head>
+    <meta charset="utf-8">
+    <title>Les Loustiques</title>
+    <link rel="stylesheet" href="style.css">
+    <link rel="icon" href="images/miniature.png" type="image/png">
+  </head>
+  <body>
     <header>
-        <div class="banniere">
-            <h1><img class="banniere" src="images/BANNIERE.png"></h1>
-        </div>
-        <div class="chaine">
-            <h2><img class="chaine" src="images/chaine.png"></h2>
+      <img src="images/logo guilde.png" alt="Votre logo" class="logo">
+      <img src="images/Dofus.png" alt="Logo secondaire" class="Dofus">
+      <h1>Les Loustiques</h1>
+      <nav>
+        <ul>
+          <a href="index.html"><button type="submit">Accueil</button></a>
+          <a href="Actualites.html"><button type="submit">Actualités</button></a>
+          <a href="Souvenirs.html"><button type="submit">Souvenirs de la guilde</button></a>
+          <a href="Evenements.html"><button type="submit">Évènements</button></a>
+          <a href="LiensUtiles.html"><button type="submit">Liens utiles</button></a>
+        </ul>
+      </nav>
     </header>
-<body>
-    
-    <nav>  
-        <ul class="navbar-nav">
-            <li class="nav-item">
-            <a href="Trouver_mon_garage.html" class="nav-link">Trouver mon garage</a>
-            </li>
-            <li class="nav-item">
-                <a href="#" class="nav-link">Ce que dit la loi</a>
-            </li>
-            <li class="nav-item">
-                <a href="#" class="nav-link">Histoires de garagistes</a>
-            </li>
-            <li class="nav-item">
-                <a href="#" class="nav-link">Insolite</a>
-            </li>  
-            <li class="nav-item">
-                <a href="#" class="nav-link">J'évalue mon garage</a>
-            </li>
-        </ul> 
-    </nav>
+    <main>
+      <section>
+        <h2>Bienvenue chez les Loustiques</h2>
+        <p>Bienvenue chez Les Loustiques, une guilde de joueurs passionnés de Dofus qui ne recule devant aucun défi ! Nous sommes un groupe d'aventuriers qui adorent explorer le monde des Douze et découvrir tout ce qu'il a à offrir. Si vous cherchez une guilde qui met l'accent sur les donjons et l'XP de zone, alors vous êtes au bon endroit. Nous adorons travailler ensemble pour atteindre nos objectifs et nous sommes toujours prêts à aider nos membres à atteindre leur plein potentiel. Rejoignez-nous pour des aventures inoubliables et pour faire partie d'une communauté soudée et passionnée ! L'entraide est une valeur essentielle au sein de notre guilde. Nous croyons que chaque membre de la guilde doit se sentir soutenu et appuyé par ses camarades, et nous mettons tout en œuvre pour que cela soit le cas. Que vous cherchiez de l'aide pour terminer un donjon difficile ou pour monter votre personnage en niveau, vous pouvez être sûr que nos membres se tiendront à vos côtés pour vous aider à atteindre vos objectifs.
 
-    <div class="bienvenue">
-        <div class="introduction">
-            <img class="mecano" src="images/mecano.png">
-        </div>
-            <h2>Bonjour et bienvenue sur Garadvisor</h2>
-                <p> Bonjour à tous,
-                    <br>Bienvenue sur Garadvisor, comme son nom a pu vous l'indiquer ce site a pour but de de compiler des avis fiables et vérifiés sur les garages automobiles.
-                    <br>Se rendre dans un garage pour un problème sur votre véhicule est souvent angoissant ! Vont-ils trouver la panne ? Suis-je dans un garage fiable ? Combien ça va me coûter ?
-                    <br>Vous trouverez ici des informations pour vous prémunir d'un certain nombre d'embûches. Les aspects juridiques, les avis clients et d'autres aspects plus fun.
-                    <br>L'idée est aussi d'avoir un espace pour que nos garagistes passionnés puissent s'exprimer.
-                    <br>N'hésitez pas à nous faire part de vos suggestions à l'adresse suivante : garadvisor@orange.Fr
-                </p>
-    </div>
-
-    <div class="TKT">
-    <H3><P>Le site est en cours de construction merci de votre patience</P></H3>
-    </div>
-    </button>
-    </body>
+          Nous sommes une guilde où les joueurs s'entraident et partagent leurs connaissances pour que chacun puisse progresser. Nous organisons régulièrement des séances d'entraînement en groupe pour que tous les membres puissent améliorer leurs compétences de combat, ainsi que des sorties de groupe pour explorer de nouvelles zones et découvrir de nouveaux donjons.
+          
+          Si vous cherchez une guilde où l'entraide est une valeur fondamentale, où vous pourrez apprendre et progresser avec d'autres joueurs motivés, alors rejoignez-nous chez Les Loustiques ! </p>
+      </section>
+      <section>
+        <h2>Dernières actualités</h2>
+        <article>
+          <h3>ANKAMALIVE - 2.67<span class="date"> - 4 mars 2023</span></h3>
+          <p>Le 6 mars prochain, ne manquez pas l'un des événements les plus attendus de la communauté Dofus ! Ankama Live sur www.tcitch.tv diffusera en direct la présentation de la mise à jour 2.67 de Dofus, qui promet de nombreuses nouveautés. Au programme notamment, la refonte des alliances et des incarnations, de quoi ravir les joueurs les plus aguerris. Ne ratez pas cette occasion unique de découvrir en avant-première les dernières fonctionnalités du jeu !</p>
+        </article>
+        <article>
+          <h3></h3>
+          <p></p>
+        </article>
+      </section>
+      <footer>
+        <p>&copy; 2023 Les Loustiques. Tous droits réservés.</p>
+      </footer>
+    </main>
+    <script type="text/javascript">window.$crisp=[];window.CRISP_WEBSITE_ID="48e58426-4766-4e3f-84ae-6790035dc6f4";(function(){d=document;s=d.createElement("script");s.src="https://client.crisp.chat/l.js";s.async=1;d.getElementsByTagName("head")[0].appendChild(s);})();</script>
+  </body>
 </html>
